show code snippet detail
